tests/e2e/semantics/ops_boolean_int_regex.error
Error: syntax error in story at line 1, column 5

1|    a = 1 and /foo/
          ^^^^^^^^^^^

E0122: `regexp` can't be converted to `boolean`
